--- a/data/wifimanager.css
+++ b/data/wifimanager.css
@@ -1,74 +1,14 @@
-/* ======================
-Global color variables
-====================== */
-:root {
-  --colorBack: #000 ;   /* Background - body          */
-  --colorNav: #359  ;   /* Background - Navigation    */
-  --colorON: #359   ;   /* Standard button            */
-  --hoverON: #116   ;   /* Standard button hover      */
-  --colorOFF: #666  ;   /* class = 'button-off'       */
-  --hoverOFF: #222  ;   /* hover class = 'button-off' */
-  --colorCard: #ccc ;   /* B.G. class = 'card'        */
-}
-
-/* ======================
-Global design
-====================== */
-html {
-  font-family: Arial, Helvetica, sans-serif; 
-  text-align: center;
-}
-
-body {  
-  background-color: var(--colorBack);
-  background-image: url('background.png');
-  margin: 0;
-}
-
-a { text-decoration: none;  }
-
-h1 {
-  width: 100%;
-  font-size: 1.8rem; 
-  color: var(--colorON);
-  margin: 0.5rem auto 0 auto;
-  background-color: var(--colorCard);
-}
-
-/* The "responsive" class is added to the navigation bar with JavaScript when the user clicks on the icon. 
-This class makes the top line look good on small screens (display the links vertically instead of horizontally).
-When the screen is less than 600 pixels wide, hide all links, except for the first one.
-*/
-@media screen and (max-width: 600px) { .listTop a { display: none; }; }
-  /* .listTop { display: block; } */
-
 .header {
-  display: flex;
-  overflow:hidden;
-  background-color: var(--colorNav);
-  min-width: 280px;
-  border-radius: 1rem;
-  flex-direction: column; /* Arrange items in a column */
   width: 100%;
   font-size: 1.8rem; 
   color: var(--colorON);
   padding: 2rem 0;
   margin: 1rem auto;
 }
+/* .card {max-width: 500px; } */
 
-/* ================================== 
- Style the cards 
-================================== */
-.card {
-  padding-top: 0.5rem;
-  max-width: 500px; 
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  background-color: var(--colorCard); 
-  box-shadow: 2px 2px 12px 1px black;
-  border-radius: 1rem;
-}
+.card { padding-top: 0.5rem;
+  max-width: 500px; }
 
 .form-group {
   display: flex;
@@ -77,50 +17,10 @@ When the screen is less than 600 pixels wide, hide all links, except for the fir
 }
 
 .title {
-  display: inline-block;
-  color: var(--colorON);
-  margin: 1rem 1rem 0.1rem 0;  
+  margin-right: 1rem; /* Add space between label and input */
   min-width: 100px; /* Optional: set a minimum width for labels */
   text-align: right; /*Align text to the right*/
 }
 
 /* Allow input to take 95% of the remaining space */
-.form-group { flex: 0.95; } 
-
-/* ================================== 
- Style the buttons  
-================================== */
-button {
-  border: none;
-  color: var(--colorCard);
-  background-color: var(--colorON);  
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  border-radius: .5rem;
-  transition-duration: 0.4s;
-  margin: 0.3rem auto;
-  padding: 0.5rem 1rem;
-  width: 40%;
-  min-width: 150px;
-  max-width: 200px;
-}
-
-/* =====================
-Style the input fields
-===================== */
-input {
-  flex: 0.95;
-  width: 40%;
-  background-color: var(--colorOFF);
-  color: #eee;
-  padding: 0.33rem 0;
-  text-align: center;
-  font-size: 1rem;
-  border-radius: .5rem;
-  transition-duration: 0.4s;
-}
-
-button:hover { background-color: var(--hoverON); cursor: pointer;}
-.button-off { background-color: var(--colorOFF); }
-.button-off:hover { background-color: var(--hoverOFF); cursor: pointer;}
+.form-group input { flex: 0.95; } 
