modified:   data/wifimanager.css 	modified:   src/01_JSON.hpp 	modified:   src/02_FileSys.hpp 	modified:   src/03_wifi.hpp 	modified:   src/04_bme.hpp 	modified:   src/05_websocket.hpp 	modified:   src/06_events.hpp 	modified:   src/main.cpp

--- a/data/wifimanager.css
+++ b/data/wifimanager.css
@@ -62,14 +62,14 @@ h1 {
   background-color: var(--colorCard);
 }
 
-/* ======================
+/* ================================== 
 Main body
-====================== */
+================================== */
 .content { padding: 30px; }
 
-/* ================================== 
+/* =====================
  Style the cards 
-================================== */
+======================== */
  .card {
   margin: 1rem auto;
   padding: 0.5rem;
@@ -117,9 +117,9 @@ input {
   border-radius: .5rem;
 }
 
-/* ================================== 
+/* =====================
  Style the buttons  
-================================== */
+======================== */
 button {
   border: none;
   color: var(--colorCard);
